# anda-app

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml  rust-test.yml
src/: app.css  app.html  global.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  Makefile  dev.Info.plist  tauri.appstore.conf.json  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/kip/: SystemInstructions.md
src-tauri/locales/: app.yml
src-tauri/src/: api.rs  deeplink.rs  lib.rs  logging.rs  main.rs  menu.rs  service.rs  tray.rs  utils.rs
src-tauri/src/api/: assistant.rs  auth.rs  i18n.rs  mod.rs  settings.rs  updater.rs
src-tauri/src/model/: app.rs  user.rs
src-tauri/src/service/: assistant.rs  icp.rs  stablecell.rs
src/lib/: init.ts  locales.ts
src/lib/components/chat/: ChatConversation.svelte  ChatInput.svelte  ChatMessage.svelte
src/lib/components/diagnosis/: DiagnosisModal.svelte
src/lib/components/icons/: AIGenerate2.svelte  AccountCircleLine.svelte  AddCircleLine.svelte  AndaLogo.svelte  DiscussLine.svelte  DownloadCloud2Line.svelte  EyeLine.svelte  EyeOffLine.svelte  FadeStaggerCircles.svelte  FadeStaggerSquares.svelte  File3Line.svelte  FileCopy2Line.svelte  FileTextLine.svelte  GearSpinner.svelte  ImageAILine.svelte  Information2Line.svelte  MicAILine.svelte  MvAILine.svelte  Robot2Line.svelte  RouterLine.svelte  Settings5Line.svelte  StopFill.svelte  VideoAILine.svelte
src/lib/components/ui/: AndaPlaceholder.svelte
src/lib/stores/: assistant.mock.ts  assistant.svelte.ts  auth.svelte.ts  auth.ts  chat.svelte.ts  i18n.ts  modal.svelte.ts  settings.svelte.ts  toast.svelte.ts  updater.svelte.ts
src/lib/types/: assistant.ts  chat.ts
src/lib/utils/: helper.ts  markdown.ts  prismjs.ts  tauri-mock.ts  tauri.mock.ts  window.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/(app)/: +layout.svelte
src/routes/(app)/agent/: +page.svelte
src/routes/(app)/assistant/: +page.svelte
src/routes/(app)/discover/: +page.svelte
src/routes/(app)/messages/: +page.svelte
src/routes/(app)/profile/: +page.svelte
src/routes/app/: +layout.svelte
src/routes/app/assistant/: +page.svelte
src/routes/app/profile/: +page.svelte
src/routes/app/threads/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/update/: +page.svelte
