[package]
name = "anda_ai"
version = "0.2.4"
description = "Anda AI Assistant"
authors = ["LDC Labs"]
edition = "2024"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arc-swap = "1.7"
aes-gcm = "0.10"
anda_core = "0.7"
anda_engine = "0.7"
anda_web3_client = "0.7"
anda_assistant = "0.2"
anda_object_store = "0.1"
anda_db = "0.5"
ciborium = "0.2"
candid = "0.10"
hex = "0.4"
futures = { version = "0.3" }
log = { version = "0.4", features = ["kv", "kv_serde"] }
object_store = { version = "0.12" }
ic-cdk = "0.18"
ic-agent = "0.42"
ic_auth_types = "0.6"
ic_auth_verifier = { version = "0.6", features = ["full"] }
ic_cose_types = "0.9"
ic_cose = "0.9"
ic_tee_agent = "0.6"
rand = "0.9"
tokio = { version = "1" }
tokio-util = "0.7"
tauri = { version = "2", features = [
  "tray-icon",
  "image-ico",
  "image-png",
  "unstable",
] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
parking_lot = "0.12"
rust-i18n = "3"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[package.metadata.i18n]
available-locales = ["en", "zh"]
default-locale = "en"
load-path = "locales"
